tests/ui/formatter/fail/uppercase_binary.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
#[error("{value:B}")]
struct UppercaseBinary {
    value: u8,
}

fn main() {}
